Put in a real web page.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Black Canyon Programming
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Black Canyon Development</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Black Canyon Development</h1>
+				<p>This is a site for blurbs about tech things as I figure out how to write code.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="https://github.com/blackcanyon">github.com/blackcanyon</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
