--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Black Canyon
 ---
 <div class="blurb">
 	<h1>Black Canyon Development</h1>
